@@ -1,3 +1,8 @@
+2001-10-25  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* Defaults.py (MESSAGE_FROM_STYLE): New variable that specifies
+	how `From' headers should look on outgoing tagged messages.
+
 2001-10-24  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* Cookie.py (make_keyword_address): Lowercase keyword before
